--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Practice manipulating JavaScript objects">
   <meta name="author" content="Flatiron School">
 </head>
+<h1>Deij was here</h1>
 <body>
   hello
   <script type="text/javascript" src="index.js"></script>
